<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuzzy Clock Watchface</string>
    <string name="watchface_name">Fuzzy Clock</string>
    <string name="settings_name">Settings</string>

    <!-- General -->
    <string name="visible">Visible</string>
    <string name="hidden">Hidden</string>

    <!-- Strings related to Settings -->
    <string name="pref_category_elements">Elements</string>
    <string name="pref_category_textformat">Text format</string>
    <string name="pref_category_system">System</string>

    <string name="pref_title_showDate">Show date</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_fontSize">Font size</string>
    <string name="pref_title_textAlignment">Text alignment</string>
    <string name="pref_title_foregroundColor">Text color</string>
    <string name="pref_title_backgroundColor">Background color</string>
    <string name="pref_title_notifState">Show notifications</string>
    <string name="pref_title_showStatusbar">Show status icons</string>
    <string name="pref_title_showDigitalClock">Show digital clock</string>
    <string name="pref_title_simplerDate">Simpler date</string>

    <string-array name="pref_list_language_titles">
        <item>Dependent on device setting</item>
        <item>English</item>
        <item>Dutch</item>
    </string-array>

    <string-array name="pref_list_textAlignment_titles">
        <item>Left</item>
        <item>Center</item>
        <item>Right</item>
    </string-array>

    <string-array name="pref_list_color_titles">
        <item>Black</item>
        <item>Grey</item>
        <item>White</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Dark Gray</item>
        <item>Blue Gray</item>
    </string-array>

    <string-array name="pref_list_notifState_titles">
        <item>Visible</item>
        <item>Show count</item>
        <item>Hidden</item>
    </string-array>

    <string-array name="pref_list_visibility_titles">
        <item>Never</item>
        <item>When awake</item>
        <item>Always</item>
    </string-array>

</resources>
